release 3.0.1: Xlayer improvements/debugging